--- a/View/LoginView.xaml
+++ b/View/LoginView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFBase.View.LoginView"
+﻿<local:ViewBase x:Class="WPFBase.View.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WPFBase.View"
         mc:Ignorable="d"
         Title="LoginView" Height="450" Width="800">
-    <Grid>
+    <Grid Background="Red">
         
     </Grid>
-</Window>
+</local:ViewBase>
